--- a/TestingSystem/js/templates/results.html
+++ b/TestingSystem/js/templates/results.html
@@ -2,8 +2,8 @@
 
 	<div class="test-results">
 		<ol>
-			<li ng-repeat="(i, quest) in chapter.questions">
-				<span ng-class="{'question': true, 'is-right': checkAnswer(i), 'is-wrong': !checkAnswer(i)}">{{quest.title}}</span> <span class="answer" ng-show="!checkAnswer(i)">- "{{quest.answers[quest.answered].answer}}"</span>
+			<li ng-repeat="(i, quest) in chapter.questions" ng-show="!quest.missing && !checkAnswer(i)">
+				<span ng-class="{'question': true, 'is-wrong': true}">{{quest.title}}</span> <!-- <span class="answer" ng-show="!checkAnswer(i)">- "{{quest.answers[quest.answered].answer}}"</span>-->
 			</li>
 		</ol>
 	</div>
