--- a/TestingSystem/js/templates/testForm.html
+++ b/TestingSystem/js/templates/testForm.html
@@ -1,6 +1,6 @@
 
 	<div class="modal-header">
-		<h3 style="margin: 0; color: green;">{{chapter}}</h3>
+		<h3 style="margin: 0; color: green;">{{chapter}}</h3><timer style="position: relative; float: right; top: -14px;" init="{{getTimeoutValue(chapter)}}" title="Времени осталось.."/>
 	</div>
 	<div class="modal-body">
 		<p style="color: blue; font-size: 17px; font-weight: bold; text-shadow: 3px 1px 2px rgba(150, 150, 150, 0.82);">
@@ -14,7 +14,7 @@
 				</li>
 			</ol>
 		</div>
-		<a href="#" style="position: relative; float: right; height: 75px; border: 1px solid silver; border-radius: 0px 4px 4px 0px; display: inline-block;" ng-click="skipQuestion()">
+		<a id="btn-skip-question" href="#" ng-click="skipQuestion()" title="Пропустить вопрос..">
 			<img style="position: relative; top: 14px; height: 41px;" src="images/skip-icon.png"/>
 		</a>
 	</div>
