--- a/TestingSystem/css/index.css
+++ b/TestingSystem/css/index.css
@@ -12,6 +12,15 @@
 		text-shadow: 3px 1px 3px rgba(150, 150, 150, 0.82);
 	}
 	
+	#btn-user-quit {
+		padding: 2px;
+		border-radius: 3px;
+	}
+	
+	#btn-user-quit:hover {
+		background-color: red;
+	}
+	
 	.question-sections {
 		display: inline-block;
 	}
