Everything has been updated (restructed, shuffle etc.).

--- a/TestingSystem/js/partials/login.html
+++ b/TestingSystem/js/partials/login.html
@@ -1,6 +1,6 @@
 
 	
-	<div id="login-form" ng-controller="LoginCtrl">
+	<div id="login-form">
 		<h2 style="padding-bottom: 12px; text-align: center; color: green;">Welcome to Testing System!! <span style="color: silver; font-size: 14px;">(developer by PavelB.&copy;)</span></h2>
 		<form>
 			<table style="margin: auto; width: 88%;" border="0">
