--- a/TestingSystem/js/partials/main.html
+++ b/TestingSystem/js/partials/main.html
@@ -1,5 +1,5 @@
 
-	<div ng-controller="TestingCtrl">
+	<div>
 		<header>
 			<h1 style="display: inline-block;" class="caption">&ldquo;{{quiz.caption}}&rdquo; <span style="font-size: 14px; color: silver;">from {{quiz.author}}&copy;</span></h1>
 			<div style="position: relative; float: right; right: 86px;">
